# datafission

./: .gitignore  Cargo.toml  Makefile  readme.md
src/: datatype.rs  lib.rs  parquet_reader.rs  schema.rs
test_data/: yellow_tripdata_2020-12_tiny.parquet
